# MLOpsProject

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  data.dvc  evaluate.dockerfile  main.py  profile.prof  pyproject.toml  requirements.txt  tasks.py  temp_data_test.dvc  train.dockerfile  train_data.dvc
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: linting.yaml  pytests.yaml  tests.yaml
MLOps_jacob/80pgisqn/checkpoints/: epoch=0-step=739.ckpt
MLOps_jacob/ma6h81ag/checkpoints/: epoch=0-step=1.ckpt
configs/: base_config.yaml  drift_config.yaml
data/: .gitignore  celeba.dvc  data-train.dvc
data/data-drift/: drift.dvc
data/data-train/: .gitignore  Angry.dvc  Fear.dvc  Happy.dvc  Sad.dvc  Suprise.dvc
dockerfiles/: api.dockerfile  entrypoint.sh  evaluate.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  fit-simpleProfiler.txt
reports/drift/: celeba_drift.html
src/mlopsproject/: api.py  data.py  drift.py  evaluate.py  frontend.py  model.py  model2.py  prediction_database.csv  train.py  visualize.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_apis.py  test_integration_model.py  test_model.py
tests/performancetests/: locustfile.py
tests/unittests/: test_data.py  test_model.py
