[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlopsproject"
version = "0.0.1"
description = "MLOps project"
authors = [
  { name = "group_12", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[gs]>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "fastapi==0.115.6",
    "httpx>=0.28.1",
    "google-cloud-storage>=3.8.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "omegaconf>=2.2,<2.4",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.1.0",
    "python-multipart>=0.0.21",
    "pytorch-lightning>=2.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
    "evidently>=0.7.20",
    "locust>=2.43.1",
    "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==8.3.4",
    "ruff==0.14.14",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*self.log.*trainer.*:UserWarning",
]

[project.scripts]
preprocess = "mlopsproject.data:main"
train = "mlopsproject.train:main"
evaluate ="mlopsproject.evaluate:main"
data = "mlopsproject.data:get_data_splits"
